# RustDrop

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  TESTING.md  deny.toml  docker-compose.yml
.github/workflows/: ci-cd.yml
benches/: performance.rs
mutants.out/: lock.json  mutants.json  outcomes.json
scripts/: run_tests.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: config.rs  error.rs  mod.rs  models.rs
src/core/app/: mod.rs
src/discovery/: mod.rs
src/utils/: file.rs  mod.rs  network.rs  qrcode.rs
src/web/: routes.rs  server.rs
src/web/handlers/: api.rs  mod.rs  static_files.rs
tests/: e2e_tests.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  security_tests.rs  stress_tests.rs  test_config.toml
